--- a/06_local_AD.tex
+++ b/06_local_AD.tex
@@ -96,7 +96,7 @@ The table shows that the local AD approach is approximately six times faster tha
 
 \section{Two-Phase Incompressible Flow}
 \label{sec:TwoPhaseSimulation}
-Previously in this thesis, I have only looked at primary production, where we have single-phase flow, with oil as the only fluid present. As explained in the introduction, at most 30\% of the oil in the reservoir will be extracted unless we apply external forces to the reservoir. This normally consists of injecting either water, gas, or both, into the reservoir in a secondary production. There is also a third production phase called enhanced oil recovery or tertiary production, but as the purpose of this thesis is not oil recovery, but to see how the AD tools perform simulating oil recovery, I will not go into this subject. More detailed information about oil recovery can be found in \citet{lieMrstUrl}. I will also describe a simplified model of secondary production, where sufficient information for this example is that we want to simulate how water flows from an injector and into a reservoir full of oil. This will be simulated for a subregion of Model 2 from the 10th SPE Comparative Solution Project \emph{\citep{SPE10}}. This model represents a simplified reservoir geometry with somewhat exaggerated geological heterogeneity and was created as a challenging case to benchmark upscaling methods against each other.
+Previously in this thesis, I have only looked at primary production, where we have single-phase flow, with oil as the only fluid present. As explained in the introduction, at most 30\% of the oil in the reservoir will be extracted unless we apply external forces to the reservoir. This normally consists of injecting either water, gas, or both, into the reservoir in a secondary production. There is also a third production phase called enhanced oil recovery or tertiary production, but as the purpose of this thesis is not oil recovery, but to see how the AD tools perform simulating oil recovery, I will not go into this subject. More detailed information about oil recovery can be found in \citet{lieMrstUrl}. I will also describe a simplified model of secondary production, where sufficient information for this example is that we want to simulate how water flows from an injector and into a reservoir full of oil. This will be simulated for a subregion of Model 2 from the 10th SPE Comparative Solution Project \emph{\citep{SPE10}}. This model represents a simplified reservoir geometry with somewhat exaggerated geological heterogeneity and was created as a challenging case to benchmark upscaling methods against each other. Like in \autoref{ch:FlowSolver}, I have called MATLAB and MRST from Julia to initialize the SPE10 grid and to make plots.
 
 The SPE10 (Model 2) grid is split into 85 layers. Each layer contains 60$\times$220 cells, making the total number of grid cells 1 122 000. To simplify the implementation, I will only look at a single layer, layer 5, making the problem two-dimensional with 13 200 cells. In differs from the grid in \autoref{ch:FlowSolver} in that the permeability and porosity varies throughout the grid. This will affect the path of the water flow. \autoref{fig:porositySPE10} shows the porosity in the grid and \autoref{fig:permeabilitySPE10} shows a logarithmic color plot of the permeability. Both figures also display the placement of the water injector in the center of the grid, and the four wells at each corner. \autoref{fig:porositySPE10} shows that the rock around wells P3 and P4 are very dense (low porosity) and \autoref{fig:permeabilitySPE10} naturally shows that the permeability is also low in this area. This gives us an expectation that the injected water will primarily flow to the left.
 \begin{figure}[H]
