--- a/05_flow_solver_with_AD.tex
+++ b/05_flow_solver_with_AD.tex
@@ -1,14 +1,14 @@
 \chapter{Flow Solver With Automatic Differentiation}
 \label{ch:FlowSolver}
-To compare different AD implementations in Julia and MATLAB I have implemented MRST's tutorial, "Single-phase Compressible AD Solver" from \texttt{flowSolverTutorialAD.m} \emph{\citep{flowSolverADExample}}, in Julia. The example is made as an introduction to how AD can be used in MRST, hence it is a good example to use when the goal is to compare the implementation of AD in MATLAB and Julia. 
+To compare the different AD implementations in Julia and MATLAB I have implemented MRST's tutorial, "Single-phase Compressible AD Solver" from \texttt{flowSolverTutorialAD.m} \emph{\citep{flowSolverADExample}}, in Julia. The example is made as an introduction to how AD can be used in MRST, hence it is a good example to use when the goal is to compare the implementation of AD in MATLAB and Julia. 
 
 \section{Grid Construction}
 \label{sec:GridConstruction}
-The example consist of modelling how the pressure drops within a rectangular reservoir measuring $200\times 200 \times 50 \text{m}^3$ when we have a well that that is producing oil. As mentioned in the introduction, this is called primary production, and because of high pressure in the reservoir, the oil flows out by itself. "Single-phase solver" only means that we do not have different phases of fluids, like water and/or gas, present during the simulation. In this simulation we assume there is only oil present in the reservoir. As the main purpose of this example is to compare the AD tools in MATLAB and Julia, and not the process of solving the problem, including setting up the grid and other necessary variables, some of the initialization and plotting have been performed in Julia by calling code from MRST. This has been done by using the package MATLAB.jl \emph{\citep{MATLAB.jl}}. This package allows calling MATLAB functions from Julia and retrieve the output variables. This is done by the function call
+The example consist of modelling how the pressure drops within a rectangular reservoir measuring $200\times 200 \times 50 \text{m}^3$ when we have a well that is producing oil. As mentioned in the introduction, this is called primary production, and because of high pressure in the reservoir, the oil flows out by itself. "Single-phase solver" only means that we do not have different phases of fluids, like water and/or gas, present during the simulation. In this simulation we assume there is only oil present in the reservoir. As the main purpose of this example is to compare the AD tools in MATLAB and Julia, and not the process of solving the problem, including setting up the grid and other necessary variables, some of the initialization and plotting have been performed in Julia by calling code from MRST. This has been done by using the package MATLAB.jl \emph{\citep{MATLAB.jl}}. This package allows calling MATLAB functions from Julia and retrieve the output variables. This is done by the function call
 \lstinputlisting{code/mxcall.jl}
 where we have three input parameter and two output parameters. We have to specify the number of output parameters after the MATLAB function name.  By calling MATLAB from Julia, we can use MRST's \texttt{G = computeGeometry(...)} function to set up the grid for the simulation. The grid of the reservoir can be seen in \autoref{fig:flowSolverGrid}. The variable \texttt{G} that contains the grid properties is now a structured array (struct), having all the information on cells, facets, vertices and nodes that we need to make the discrete divergence and gradient operators as explained in \autoref{sec:ApplicationsAD}. 
 
-Next, we define the properties of the rock. In an oil reservoir, the oil lies inside porous rock and hence the properties of the rock will affect the flow of the oil. The amount of oil we can have inside the rock is measured as pore volume. First, we make a new variable \texttt{rock} that contains parameters that describe the rock's ability to store and trasmit fluids for each cell with the function \texttt{rock = makeRock(...)}. Then, we say that in our model the rock is compressed constantly as a function of pressure and we obtain the analytic solution for the pore volume as a function of pressure
+Next, we define the properties of the rock. As explained in \autoref{sec:OilReservoirs}, in an oil reservoir, the oil lies inside porous rock and hence the properties of the rock will affect the flow of the oil. The amount of oil we can have inside the rock is measured as pore volume. First, we make a new variable \texttt{rock} that contains parameters that describe the rock's ability to store and trasmit fluids for each cell with the function \texttt{rock = makeRock(...)}. Then, we say that in our model the rock is compressed constantly as a function of pressure and we obtain the analytic solution for the pore volume as a function of pressure
 \begin{equation}
     pv(p) = \text{pv}_r \exp[c_r\cdot(p-p_r)],
     \label{eq:poreVolume}
@@ -20,7 +20,7 @@ Since we assume that the oil have a constant compressibility, the density of the
     \rho(p) = \rho_r\exp[c\cdot(p-p_r)],
     \label{eq:pressureSolverDensity}
 \end{equation}
-where $\rho_r = 850\text{kg}/\text{m}^3$ and $c$ is a constant controlling how fast the oil is compressed. The density of the fluid as a function of pressure is plotted for some pressure values in \autoref{fig:flowSolverDensity}.
+where $\rho_r = 850\text{kg}/\text{m}^3$ and $c$ is a constant controlling how fast the oil is compressed. The density of the oil as a function of pressure is plotted for some pressure values in \autoref{fig:flowSolverDensity}.
 \begin{figure}[H]
     \centering
     \begin{subfigure}[t]{0.48\textwidth}
@@ -41,7 +41,7 @@ The initial pressure in the reservoir is calculated by solving the nonlinear ODE
 \begin{equation*}
     \frac{dp}{dz} = g\cdot \rho(p), \quad p(z = 0) = p_r = 200\text{bar} 
 \end{equation*}  
-for the fluid density given by \myeqref{eq:pressureSolverDensity} and $g$ as the gravity. The well is then inserted by removing 8 grid elements using the \texttt{W = addWell(...)} function. The grid with initial pressure and well can be seen in \autoref{fig:flowSolverGridWithWell}.
+for the fluid density given by \myeqref{eq:pressureSolverDensity} and $g$ as the gravity. The well is then inserted in 8 grid elements using the \texttt{W = addWell(...)} function. The grid with initial pressure and well can be seen in \autoref{fig:flowSolverGridWithWell}.
 \begin{figure}[H]
     \centering
     \begin{subfigure}[t]{0.48\textwidth}
@@ -54,7 +54,7 @@ for the fluid density given by \myeqref{eq:pressureSolverDensity} and $g$ as the
     \begin{subfigure}[t]{0.48\textwidth}
         \centering
         \includegraphics[width = \textwidth]{figures/flowSolver_gridWithWell.eps}
-        \caption{Reservoir grid plotted with initial pressure and well P1. Pressure is given in bar. The well has replaced 8 grid elements. Some grid elements are removed to give a better visualization of the well.}
+        \caption{Reservoir grid plotted with initial pressure and well P1. Pressure is given in bar. The well covers 8 grid elements. Some grid elements are removed to give a better visualization of the well.}
         \label{fig:flowSolverGridWithWell}
     \end{subfigure}
     \caption{}
@@ -62,21 +62,22 @@ for the fluid density given by \myeqref{eq:pressureSolverDensity} and $g$ as the
 
 \section{Setup of Governing Equations}
 \label{sec:setupGovEq}
-After initializing the grid we want to define the discrete gradient and divergence operators, as well as the transmissibilities as explained in \myeqref{eq:transmissibility}. This is done by exploiting that we have all the necessary information about the grid properties, such as the cells centroid coordinates, facets areas and so on, stored in the struct \texttt{G}. In \texttt{rock} we have stored the permeability inside each cell that will affect the flux through each facet. With all this information we can now obtain the transmissibilities \texttt{T} and the discrete operators
+After initializing the grid we want to define the discrete gradient and divergence operators, as well as the transmissibilities as explained in \myeqref{eq:transmissibility}. This is done by exploiting that we have all the necessary information about the grid properties, such as the cells centroid coordinates, facets area, and so on, stored in the struct \texttt{G}. In \texttt{rock} we have stored the permeability inside each cell that will affect the flux through each facet. With all this information we can now obtain the transmissibilities \texttt{T} and the discrete operators
 \lstinputlisting{code/grad_and_div.jl}
 
-The matrix C in the discrete operators are created such that when it is multiplied by the pressure $p$, the result becomes the pressure difference between two adjacent cells, as defined in \myeqref{eq:discreteGradient}. The matrix C is stored as a sparse matrix, and the reason why is clear from \autoref{fig:discreteOperatorsC}, which shows the sparse  structure of C. The divergence operator is made using the fact that in the continuous case, the gradient operator is the adjoint of the divergence operator
-\begin{equation*}
-    \int_\Omega p\nabla \cdot \vec{v} d\Omega + \int_\Omega \vec{v}\nabla p d\Omega = 0.
-\end{equation*}
-This holds for the discrete case as well \emph{\citep{lieMrstUrl}}, and hence the adjoint of \texttt{C} is the negative transpose of \texttt{C}.
-
+The matrix C in the discrete operators are created such that when it is multiplied by the pressure $p$, the result becomes the pressure difference between two adjacent cells, as defined in \myeqref{eq:discreteGradient}. The matrix C is stored as a sparse matrix, and the reason why is clear from \autoref{fig:discreteOperatorsC}, which shows the sparse  structure of the matrix. The divergence operator is made using the fact that in the continuous case, the gradient operator is the adjoint of the divergence operator
 \begin{wrapfigure}{r}{5.5cm}
     \includegraphics[width=\linewidth]{figures/flowSolver_discrete_operators_C.eps}
     \caption{Structure of discrete operator \texttt{C}.}
     \label{fig:discreteOperatorsC}
 \end{wrapfigure}
-Now we have all the ingredients to set up the governing equations for the flow in the reservoir. We use a finite volume method to discretize in space, as explained in \autoref{sec:ApplicationsAD}, and a backward Euler method to discretize in time. In the end, all the equations we want to solve should be on residual form, $\boldsymbol{F}(\boldsymbol{x}) = 0$, so that we can use the Newton-Raphson method described in \myeqref{eq:newtonRaphsonVector} to solve the system. As there are multiple equations that will be a part of the residual function $\boldsymbol{F}(\boldsymbol{x})$, we define them separately first. One of the advantages of defining the discrete gradient- and divergence operator is that the continuous and discrete forms of the equations look very similar. Hence I will first state the continuous version of the equation and then the discrete, so that it is easy to see how similar they look. I start by defining Darcy's law, which explains how the oil will flow through the porous rock
+\begin{equation*}
+    \int_\Omega p\nabla \cdot \vec{v} d\Omega + \int_\Omega \vec{v}\nabla p d\Omega = 0.
+\end{equation*}
+This holds for the discrete case as well \emph{\citep{lieMrstUrl}}, and hence the adjoint of \texttt{C} is the negative transpose of \texttt{C}.
+
+
+Now we have all the ingredients to set up the governing equations for the flow in the reservoir. We use a finite volume method to discretize in space, as explained in \autoref{sec:ApplicationsAD}, and a backward Euler method to discretize in time. In the end, all the equations we want to solve should be on residual form, $\boldsymbol{F}(\boldsymbol{x}) = 0$, so that we can use the Newton-Raphson method described in \myeqref{eq:newtonRaphsonVector} to solve the system. As there are multiple equations that will be a part of the residual function $\boldsymbol{F}(\boldsymbol{x})$, we define them separately first. One of the advantages of defining the discrete gradient- and divergence operator is that the continuous and discrete forms of the equations look very similar. Hence, I will first state the continuous version of the equation and then the discrete, so that it is easy to see how similar they look. I start by defining Darcy's law, which explains how the oil will flow through the porous rock
 
 \begin{equation}
     \textbf{v} = - \frac{K}{\mu}(\nabla p - \textbf{g}\rho).
@@ -85,7 +86,7 @@ Now we have all the ingredients to set up the governing equations for the flow i
 $K$ is the permeability that we have saved in the \texttt{rock} variable and $\mu$ is the viscosity of the oil.
 The corresponding discrete equation that we call \texttt{flux} is given by 
 \lstinputlisting{code/flux.jl}
-Here, T is the transmissibilities that contain $k$ and the properties of the grid. Since two adjacent cells can have different values of $\rho$, we use the  average for the two cells. \texttt{gradz} is the gradient of the cell centroid's $z$-value. This determines how much the flux depend on $g$ given the orientation of the adjacent cells. When \texttt{flux} is defined, we define the continuity equation in the continuous case
+Here, T is the transmissibilities that contain $K$ and the other properties of the grid. Since two adjacent cells can have different values of $\rho$, we use the  average for the two cells. \texttt{gradz} is the gradient of the cell centroid's $z$-value. This determines how much the flux depend on $g$ given the orientation of the adjacent cells. When \texttt{flux} is defined, we define the continuity equation in the continuous case
 \begin{equation}
     \frac{\partial}{\partial t}(\phi\rho) + \nabla\cdot(\rho\textbf{v}) = q,
     \label{eq:continuityEqPressure}
@@ -104,11 +105,11 @@ The pressure drop near the well usually takes place on a much shorter length sca
 \begin{equation*}
     q = \frac{\rho}{\mu}\mbox{WI}(p_c - p_r),
 \end{equation*}
-where \mbox{WI} is the properties of the rock and the oil at the applicable cell. Since this equation only apply on a few of the cells in the reservoir, we also need a list of the indices \texttt{wc} for the perforated cells. These indices and the \mbox{WI} variable are given by the \texttt{W} variable we received from the \texttt{addWell} function. The discrete expression for the production in all the perforated cells are given by
+where \mbox{WI} is properties of the rock and the oil at the applicable cell. Since this equation only apply on a few of the cells in the reservoir, we also need a list of the indices \texttt{wc} for the perforated cells. These indices and the \mbox{WI} variable are given by the \texttt{W} variable we received from the \texttt{addWell} function. The discrete expression for the production in all the perforated cells are given by
 \lstinputlisting{code/q_conn.jl}
 The residual expression for the total production \texttt{qS} is then given by summing up all the production from each perforated cell, giving the expression \texttt{rateEq}
 \lstinputlisting{code/rateEq.jl}
-Here \texttt{rhoS} is the density of the oil at the surface, to obtain the total volume produced. To control the well, we can either set total inflow or outflow of the well (evaluated at surface pressure) to be constant, or set the datum (bottom-hole) pressure as constant. In either case, we will wish to compute the other (i.e., if pressure is given, we determine the surface rate, and vice versa). Herein, we assume pressure to be given as 100 bar and we get
+Here \texttt{rhoS} is the density of the oil at the surface, to obtain the total volume produced. To control the well, we can either set total inflow or outflow of the well (evaluated at surface pressure) to be constant, or set the datum (bottom-hole) pressure as constant. In either case, we will wish to compute the other (i.e., if the bottom-hole pressure is given, we determine the surface rate, and vice versa). Herein, we assume the bottom-hole pressure to be given as 100 bar and we get
 \lstinputlisting{code/ctrlEq.jl}
 When all the governing equations are defined, we merge them into one large residual vector function $\boldsymbol{F}(\boldsymbol{x})$. The first 1000 residual equations are the \texttt{presEq} with negative production \texttt{q\_conn} for the indices \texttt{wc}. Equation number 1001 is the \texttt{rateEq} and Equation 1002 is the \texttt{ctrlEq}. Hence, $\boldsymbol{x}\in\Re^{1002}$, where the first 1000 elements are the average pressure in each cell, element 1001 will be the pressure at the datum point inside the well (\texttt{bhp}), and element 1002 is the surface fluid rate \texttt{qS}. Now, if we start by defining \texttt{p}, \texttt{bhp} and \texttt{qS} as AD-variables, $\boldsymbol{F}$ will also be an AD-variable and we will have the Jacobian of the residual vector function $\boldsymbol{F}$. This means we can solve the equations using the Newton-Raphson method, defined in \myeqref{eq:newtonRaphsonVector}. A pseudo code of how we solve the system can be seen below.
 \newpage
@@ -122,9 +123,9 @@ If we simulate how the pressure in the reservoir will decay during one year, we 
     \caption{The pressure in the reservoir displayed at four different times. Pressure is given in bar.}
     \label{fig:flowSolverResult}
 \end{figure}
-Note the different intervals for the color bar in \autoref{fig:flowSolverResult} compared to \autoref{fig:flowSolverGridWithWell}. With the current color bar interval, at initial state, the whole reservoir will be displayed red. Hence, we can see how the reservoir from the beginning being approximately 200 bar everywhere, begins with the largest pressure decay close to the well, but after some time, the oil is pushed towards the well by the pressure differences and the pressure begins to decay also furthest away from the well. 
+Note the different intervals for the color bar in \autoref{fig:flowSolverResult} compared to \autoref{fig:flowSolverGridWithWell}. With the current color bar interval, at initial state, the whole reservoir will be displayed red. Hence, we can see how the reservoir from the beginning being approximately 200 bar everywhere, begins with the largest pressure decay close to the well, but after some time, the oil is pushed towards the well by the pressure differences and the pressure also begins to decay furthest away from the well. 
 
-\autoref{fig:flowSolverProduction} shows the development of the production rate and the average pressure inside the reservoir. We can see how the production rate follows the average pressure inside the reservoir, and that after some time it approaches zero. This phase is what is called primary production. In primary production, the pressure in the reservoir is so high that there is no need to pump the oil out, the pressure difference does all the work. After some time, we can see that the pressure becomes too low and the production decreases. When this happens, we transit to what is called secondary production. To retrieve more oil from the reservoir we need to apply extra pressure inside the reservoir. This can for example consist of injecting water or gas into the reservoir. This is called the secondary production. More details about how this work can be found in \emph{\cite{lieMrstUrl}}, but the main idea here is that in order to keep up the production and fully exploit the resources in the reservoir, we need to apply external pressure. To do this in the best possible way, it is important to be able to simulate how the pressure evolves inside the reservoir so that we can make good decisions on which actions produce the best possible results. This flow solver is a simple example of how we can model such evolution of the pressure in a reservoir elegantly with governing equations on residual form, created by discrete differentiation operators, and AD.
+\autoref{fig:flowSolverProduction} shows the development of the production rate and the average pressure inside the reservoir. We can see how the production rate follows the average pressure inside the reservoir, and that after some time it approaches zero. This is when primary production ends, as explained in \autoref{sec:OilReservoirs}, and we need to apply external pressure to continue production in secondary production. To do this in the best possible way, it is important to be able to simulate how the pressure evolves inside the reservoir so that we can make good decisions on which actions produce the best possible results and when to take these actions. This flow solver is a simple example of how we can model primary production in a reservoir elegantly with governing equations on residual form, created by discrete differentiation operators, and AD. A simulation of secondary production can be seen in \autoref{sec:TwoPhaseSimulation}.
 \begin{figure}[H]
     \centering
     \includegraphics[width = 0.9\textwidth]{figures/flow_solver_production.eps}
@@ -132,7 +133,7 @@ Note the different intervals for the color bar in \autoref{fig:flowSolverResult}
     \label{fig:flowSolverProduction}
 \end{figure}
 
-When it comes to solving the residual equations with the Newton-Raphson method, it is interesting to have a look at how the Jacobian of $\boldsymbol{F}$ looks like. \autoref{fig:flowSolverJacobian} shows the structure of the Jacobian. The first impression is that the matrix is very sparse. Except from a few nonzero points in row 1001 and column 1001 because of the well, the Jacobian consist of 7 diagonals with nonzero elements and the rest of the elements being 0. As there are only 6419 non-zero elements out of more than 1 million matrix elements, it is clear that storing the full $1002\times 1002$ matrix will be very inefficient.
+When it comes to solving the residual equations with the Newton-Raphson method, it is interesting to have a look at how the Jacobian of $\boldsymbol{F}$ looks like. \autoref{fig:flowSolverJacobian} shows the structure of this Jacobian. The first impression is that the matrix is very sparse. The reason for this is that each cell will only depend on its neighbouring cells. A small exception from this are the few cells containing the well. These cells will also depend on the bottom hole pressure. As there are only 6419 non-zero elements, out of more than 1 million matrix elements, it is clear that storing the full $1002\times 1002$ matrix will be very inefficient.
 
 As explained in \autoref{ch:Implementation}, the different types of AD mentioned store the Jacobians differently. Both \texttt{FAD}, \texttt{CJAD} and the two AD implementations in MRST, will, at least eventually, store the Jacobians as a list of sparse matrices where each Jacobian element in the list is the Jacobian with respect to one primary variable. In this example, this is a lot more efficient than storing the full $1002\times 1002$ Jacobian as  \texttt{ForwardDiff} does.
 \begin{figure}[H]
@@ -141,8 +142,8 @@ As explained in \autoref{ch:Implementation}, the different types of AD mentioned
     \caption{Structure of the $1002\times 1002$ Jacobian of the governing equations. There are 6419 non-zero elements.}
     \label{fig:flowSolverJacobian}
 \end{figure}
-
-The difference in implementation of the Jacobian should make a big impact on the computation time for this problem. To benchmark the different methods, we need to do some extra work to make sure that it is actually the AD we benchmark and not other parts of the code. This is especially important for the code running in Julia, since when we call MATLAB from Julia it will be a lot of overhead. This means that the setup of the discrete gradient and divergence operators will take longer when done in MATLAB called from Julia, than when we do it directly in MATLAB. If we want to run the full simulation it is not possible to separate the AD part fully, but if we only benchmark the main-loop containing the Newton-Raphson method, AD will be a dominating part of the computations together with the linear solver \texttt{f.jac\textbackslash f.val}. This means we at least will get an indication of how well the AD tools perform compared to each other. To see how the different methods scale as the discretization becomes finer and the system we solve grow, I have benchmarked three different discretizations. The first is the original setup with 10 cells in spatial direction $x$, $y$, and $z$. This gives a total number of 1000 cells in the reservoir. Then, I have also tested the implementations for 20 and 30 cells in the spatial directions. The time spent solving the system for the different methods can be seen in \autoref{tab:FlowSolverSpeedTest}.
+\todo[inline]{Legg ved siden av figur over.}
+The difference in implementation of the Jacobian should make a big impact on the computation time for this problem. To benchmark the different methods, we need to do some extra work to make sure that it is actually the AD we benchmark and not other parts of the code. This is especially important for the code running in Julia, since when we call MATLAB from Julia it will be a lot of overhead. This means that the setup of the discrete gradient and divergence operators will take longer when done in MATLAB called from Julia, than when we do it directly in MATLAB. If we want to run the full simulation it is not possible to separate the AD part fully, but if we only benchmark the main-loop containing the Newton-Raphson method, AD will be a dominating part of the computations together with the linear solver \texttt{f.jac\textbackslash f.val}. This means that we at least will get an indication of how well the AD tools perform compared to each other. To see how the different methods scale as the discretization becomes finer and the system we solve grow, I have benchmarked three different discretizations. The first is the original setup with 10 cells in the spatial directions $x$, $y$, and $z$. This gives a total number of 1000 cells in the reservoir. Then, I have also tested the implementations for 20 and 30 cells in each spatial directions. The time spent solving the system for the different methods can be seen in \autoref{tab:FlowSolverSpeedTest}.
 \begin{table}[H]
     \centering
     \caption{Table with speed benchmarks of different AD methods solving the "Single-Phase Compressible AD Solver" for different discretizations.}
@@ -158,7 +159,8 @@ The difference in implementation of the Jacobian should make a big impact on the
 \end{table}
 For 10 cells in each spatial direction it is clear that what I assumed based on the structure of the Jacobian in \autoref{fig:flowSolverJacobian} is true; The  \texttt{ForwardDiff} method takes much longer time than  \texttt{FAD}, \texttt{CJAD}  and \texttt{MRST}. Since  \textit{ForwardDiff} already spends over a minute for $10\times 10\times 10$ cells, it is omitted for finer discretizations. \texttt{MRST\_diagonal} is not presented here because there is a bug that cause the method to fail for this specific example. According to the results in \autoref{tab:FlowSolverSpeedTest}, \texttt{MRST} is a bit faster than  \texttt{FAD}, but \texttt{CJAD} and \texttt{MRST} are very similar. 
 
-It is, although, still some uncertainty in these numbers as we do not know if the linear solver in MATLAB and Julia perform equally well. In addition, another factor that can effect the result is that for the current hardware these benchmarks are running on, the computations are so demanding that the hardware becomes warm. This can cause the performance of the hardware to decrease and ruin the test results. To remove the uncertainty of both the linear solver and the hardware heating up, we can perform another benchmark. Instead of solving the linear system \texttt{f.jac\textbackslash f.val} and continuing to the next Newton-Raphson iteration until it converges and then onto a new time step, we only assemble the first residual function multiple times. In this way we only benchmark the AD part of the problem. The test is still relevant as the structure of each function will be equal for all time steps, only that there will be other values. And since the time the computer uses to calculate the residual function value and Jacobian will not depend on what type of numbers we have, but only on the structure of matrices in the Jacobians. Since the structure is the same throughout the whole simulation this benchmark will still be relevant to figure out which AD-implementation is best to solve this specific problem. \autoref{tab:FlowSolverAssemblyTest} shows the three methods assembling the first residual function of the simulation 100 times.
+It is, although, still some uncertainty in these numbers as we do not know if the linear solver in MATLAB and Julia perform equally well. In addition, another factor that can effect the result is that for the current hardware these benchmarks are running on, the computations are so demanding that the hardware becomes warm. This can cause the performance of the hardware to decrease and ruin the test results. To remove the uncertainty of both the linear solver and the hardware heating up, we can perform another benchmark. Instead of solving the linear system \texttt{f.jac\textbackslash f.val} and continuing to the next Newton-Raphson iteration until it converges and then onto a new time step, we only assemble the first residual function multiple times. In this way we only benchmark the AD part of the problem. The time the computer uses to calculate the residual function value and Jacobian will not depend on what type of numbers we have, only on the structure of the matrices in the Jacobians. Since the structure is the same throughout the whole simulation, this benchmark will still be relevant to figure out which AD-implementation is best to solve this specific problem. \autoref{tab:FlowSolverAssemblyTest} shows the three methods assembling the first residual function of the simulation 100 times.
+\todo[inline]{flytte del om repetisjon fra lokal ad hit i stedet?}
 \begin{table}[htb]
     \centering
     \caption{Table with speed benchmarks of different AD methods assembling the "Single-Phase Compressible AD Solver" residual function 100 times for different discretizations.}
