--- a/07_conclusion_and_future_work.tex
+++ b/07_conclusion_and_future_work.tex
@@ -8,5 +8,5 @@ The AD libraries are benchmarked in a prototype of a single-phase flow solver, s
 
 The last AD tool in Julia is called local AD and is implemented as a motivation from the properties of the single-phase simulation. It is similar to how AD is implemented in OPM \emph{\citep{opm}}, which is written in C and C++. Hence, local AD is a lower-level implementation than \texttt{FAD} and \texttt{CJAD}, and since OPM is the tool SINTEF recommends for creating efficient industrial simulators, it is expected that this will give an improved performance. For the single-phase solver, local AD is approximately six times faster than \texttt{CJAD} and MRST. To further test the abilities of local AD, a second simulator is implemented. This is a two-phase solver, simulating the flow of water, in a single layer of the SPE10 reservoir \emph{\citep{SPE10}}, when injecting water into the centre of the reservoir. For this simulation, \texttt{CJAD} and MRST still perform similarly, and the local AD method is approximately five times as fast.
 
-The implementation and benchmarking of \texttt{CJAD} indicate that Julia is well suited for making quick prototypes of simulators, and the benchmarks of local AD give good indications that it could also be possible to create efficient industrial simulators for oil recovery. However, the implementation has not been tested on a full realistic simulation model or for grid with more than 15 000 cells. As a reference, the full SPE10 grid has 1 122 000 cells. A natural next step in testing Julia is to make an implementation like local AD in MATLAB and compare the two languages. Since local AD depends on fast execution of for-loops, it is not expected that MATLAB will manage to execute local AD efficient, but it is a good test to see if Julia actually is a step forward compared to MATLAB. A final investigation will be to confirm whether Julia can match the computational efficiency of OPM, or other industrial simulators, in a full-scale realistic simulation. 
+The implementation and benchmarking of \texttt{CJAD} indicate that Julia is well suited for making quick prototypes of simulators, and the benchmarks of local AD give good indications that it could also be possible to create efficient industrial simulators for oil recovery. However, the local AD implementation has only been tested for a grid with less than 15 000 cells and not on a full realistic simulation model. As a reference, the full SPE10 grid has 1 122 000 cells. A natural next step in testing Julia is to make an implementation like local AD in MATLAB and compare the two languages. Since local AD depends on fast execution of for-loops, it is not expected that MATLAB will manage to execute local AD efficient, but it is a good test to see if Julia actually is a step forward compared to MATLAB. As mentioned in \autoref{sec:parallelComputing}, macro functions to parallelize for-loops are under development in Julia. As soon as these functions becomes more stable it will be easy to add it into the assemble equations implementations in local AD, and it would be interesting to see if this can improve the current implementation. This has been attempted, but the macro functions are at the moment too unstable. A final investigation will be to confirm whether Julia can match the computational efficiency of OPM, or other industrial simulators, in a full-scale realistic simulation. 
 
